tests/baselines/reference/narrowExceptionVariableInCatchClause.errors.txt
tests/cases/conformance/types/any/narrowExceptionVariableInCatchClause.ts(11,17): error TS2551: Property 'doPanic' does not exist on type '{ type: "foo"; dontPanic(): any; }'. Did you mean 'dontPanic'?
tests/cases/conformance/types/any/narrowExceptionVariableInCatchClause.ts(16,17): error TS2551: Property 'massage' does not exist on type 'Error'. Did you mean 'message'?


==== tests/cases/conformance/types/any/narrowExceptionVariableInCatchClause.ts (2 errors) ====
    declare function isFooError(x: any): x is { type: 'foo'; dontPanic(); };
    
    function tryCatch() {
        try {
            // do stuff...
        }
        catch (err) { // err is implicitly 'any' and cannot be annotated
    
            if (isFooError(err)) {
                err.dontPanic(); // OK
                err.doPanic(); // ERROR: Property 'doPanic' does not exist on type '{...}'
                    ~~~~~~~
!!! error TS2551: Property 'doPanic' does not exist on type '{ type: "foo"; dontPanic(): any; }'. Did you mean 'dontPanic'?
!!! related TS2728 tests/cases/conformance/types/any/narrowExceptionVariableInCatchClause.ts:1:58: 'dontPanic' is declared here.
            }
    
            else if (err instanceof Error) {
                err.message;
                err.massage; // ERROR: Property 'massage' does not exist on type 'Error'
                    ~~~~~~~
!!! error TS2551: Property 'massage' does not exist on type 'Error'. Did you mean 'message'?
!!! related TS2728 /.ts/lib.es5.d.ts:1023:5: 'message' is declared here.
            }
    
            else {
                throw err;
            }
        }
    }
    